--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -18,6 +18,47 @@ h6 {
   margin: 0;
 }
 
+h1 {
+  font-size: 50px;
+}
+
 p {
   margin: 0;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 50PX;
+  margin-left: 50px;
+  align-items: flex-end;
+}
+
+.hero-banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  /* height: 200px; */
+  margin-right: 50px;
+  margin-top: -80px;
+
+}
+
+.hero-banner h2 {
+  font-size: 50px;
+}
+
+/* .my-photo{
+  display: flex;
+  justify-content:left;
+  margin-left: 50px;
+} */
+
+img {
+  max-width: 50%;    /* Ensures images don't stretch beyond their container */
+  height: auto;       /* Maintains the aspect ratio */
+  border-radius: 40px; /* Adds rounded corners */
+  /* display: flex; */
+  margin-left: 50px;
+  margin-top: 100px;
 }
