--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -48,17 +48,59 @@ header {
   font-size: 50px;
 }
 
-/* .my-photo{
+.image-container {
   display: flex;
-  justify-content:left;
-  margin-left: 50px;
-} */
+  flex-direction: column;
+  align-items: center;
+}
+
+.grid-line-1, .grid-line-2 {
+  display: flex;
+  /* flex-wrap: wrap; */
+  gap: 10px; /* Adjust gap as needed */
+}
 
 img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+.big-image {
+  width: 100%;
+  position: relative;   /* Set position context */
+  display: inline-block; /* This ensures that the link acts like a container to its contents */
+}
+
+.big-image img {
+  width: 100%;
+  height: auto;
+  display: block; /* Removes any unwanted spacing */
+}
+
+.work-label {
+  position: absolute;   /* Absolutely position the label */
+  bottom: 10px;         /* Position it 10px from the bottom */
+  left: 10px;           /* Position it 10px from the left */
+  transform: none !important;  /* Override any previous transform and ensure no centering */
+  color: #ffffff;       /* White text */
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.5); /* Background for better readability */
+  padding: 5px;         /* Some padding */
+  border-radius: 3px;   /* Rounded corners */
+}
+
+
+.my-photo img {
   max-width: 50%;    /* Ensures images don't stretch beyond their container */
   height: auto;       /* Maintains the aspect ratio */
   border-radius: 40px; /* Adds rounded corners */
   /* display: flex; */
   margin-left: 50px;
   margin-top: 100px;
+}
+
+.page-section {
+  margin-right: 100px;
+  margin-left: 400px;
 }
