--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -48,35 +48,83 @@ header {
   font-size: 50px;
 }
 
-.image-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* My Photo ------------------------------------- */
+
+.my-photo img {
+  max-width: 50%;    /* Ensures images don't stretch beyond their container */
+  height: auto;       /* Maintains the aspect ratio */
+  border-radius: 40px; /* Adds rounded corners */
+  /* display: flex; */
+  margin-left: 50px;
+  margin-top: 100px;
+}
+
+
+/* ---------Grid with photos to websites */
+
+
+.big-image {
+  width: 100%;
+  position: relative;
+  display: block; /* This ensures that the link acts like a container to its contents */
+  height:auto;
+}
+
+.big-image img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border: 4px solid aqua;
+    
+}
+
+.image-2, .image-3, .image-4, .image-5 {
+  position: relative;
+  width: 50%;
+  margin: 0;
+  padding: 0;
+  border: rgb(25, 126, 166);
 }
 
 .grid-line-1, .grid-line-2 {
   display: flex;
-  /* flex-wrap: wrap; */
-  gap: 10px; /* Adjust gap as needed */
+  justify-content: flex-start;
+  flex-wrap: nowrap;
 }
 
-img {
+.grid-line-1 img, .grid-line-2 img {
   width: 100%;
-  max-width: 100%;
-  height: auto;
+  height: 100px;
+  max-height: 250px;
+  object-fit: cover;
+  border: 4px solid aqua;
 }
 
-.big-image {
-  width: 100%;
-  position: relative;   /* Set position context */
-  display: inline-block; /* This ensures that the link acts like a container to its contents */
+.image-2, .image-4 {
+margin-right: 5px;
 }
 
-.big-image img {
-  width: 100%;
-  height: auto;
-  display: block; /* Removes any unwanted spacing */
+.image-3, .image-5 {
+  margin-left: 5px;
+  
+  }
+
+  .page-section {
+    display: flex;         /* Set this as a flex container */
+    align-items: start;    /* Align items to the top */
 }
+
+.page-section h2 {
+  width: 500px;;    /* Push everything to the right of the h2 */
+}
+
+.portfolio-links {
+  flex-grow: 1;        /* This will make it consume the remaining space */
+  margin: 0 100px;  
+}
+
+
+
 
 .work-label {
   position: absolute;   /* Absolutely position the label */
@@ -91,16 +139,7 @@ img {
 }
 
 
-.my-photo img {
-  max-width: 50%;    /* Ensures images don't stretch beyond their container */
-  height: auto;       /* Maintains the aspect ratio */
-  border-radius: 40px; /* Adds rounded corners */
-  /* display: flex; */
-  margin-left: 50px;
-  margin-top: 100px;
-}
-
-.page-section {
+/* .page-section {
   margin-right: 100px;
   margin-left: 400px;
-}
+} */
